# candybox-gfx

./: Cargo.toml  LICENSE  README.md
assets/shaders/fragment_shaders/: shader.wgsl
assets/shaders/vertex_shaders/: rectangle.wgsl  triangle.wgsl
src/: lib.rs  main.rs
src/core/: context.rs  mod.rs  pipelines.rs
src/core/camera/: controller.rs  mod.rs  resources.rs  settings.rs  view_projection.rs
src/core/materials/: memory_graph.rs  mod.rs  resources.rs  textures.rs
src/core/meshes/: buffers.rs  memory_heap.rs  mod.rs  resources.rs
src/materials/: mod.rs  textures.rs
src/meshes/: mod.rs  rectangle.rs  triangle.rs
