[package]
name = "candybox-gfx"
version = "0.1.0"
edition = "2024"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies]
winit = "0.30"
wgpu = "29.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [ "full" ] }
itertools = "0.14.0"
bytemuck = "1.24"
pollster = "0.4.0"
cgmath = "0.18.0"
